# dcm_interprocess

./: CMakeLists.txt  main.cpp
cmake/: DcmIpcConfig.cmake  ExtLibs.cmake
include/dcm/: dcm.hpp  endpoint_factory.hpp  listener_factory.hpp  sender_factory.hpp
include/dcm/core/: buffer.hpp  defs.hpp  endpoint.hpp  exceptions.hpp  handler.hpp  listener.hpp  multicast.hpp  processing_queue.hpp  sender.hpp
include/dcm/highlevel/: event.hpp  event_listener.hpp  p2p.hpp  p2p_communicator.hpp
include/dcm/http/: listener.hpp  sender.hpp
include/dcm/ipc/: listener.hpp  sender.hpp
include/dcm/streamsocket/: asio_endpoint.hpp  listener.hpp  listener_session.hpp  reader.hpp  sender.hpp  socket.hpp  writer.hpp
include/interprocess/: connection.hpp  endpoint_factory.hpp  interproc.hpp  interprocess.hpp  listener_factory.hpp  sender_factory.hpp  util.hpp
include/interprocess/core/: buffer.hpp  defs.hpp  endpoint.hpp  exceptions.hpp  listener.hpp  processing_queue.hpp  sender.hpp  util.hpp
include/interprocess/ipc/: listener.hpp  sender.hpp
include/interprocess/message/: message.cpp  message.hpp  structure.hpp
include/interprocess/streamsocket/: asio_endpoint.hpp  endpoint.hpp  listener.hpp  listener_session.hpp  reader.hpp  receiver.hpp  receiver_session.hpp  sender.hpp  writer.hpp
src/: util.cpp
